Go through all tokens to look for a volatile one. (fdo#31939)

When a volatile token is inside a conditional function (such as IF),
*and* the evaluation of that conditional skips the volatile token
it would incorrectly mark the cell non-volatile.  The solution is
to scan through all tokens in the token array in the beginning of
the calculation and mark the cell volatile if one is found.